# automate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: benchmark.yml  main.yml
derive/: Cargo.toml
derive/src/: discord.rs  json.rs  lib.rs  utils.rs
derive/src/attribute/: convert.rs  endpoint.rs  listener.rs  mod.rs  object.rs  payload.rs  stringify.rs
derive/src/attributes/: endpoint.rs  functions.rs  listener.rs  mod.rs
derive/src/derive/: as_json.rs  mod.rs  state.rs  storage.rs  stored.rs
derive/src/macros/: functions.rs  methods.rs  mod.rs
examples/: README.md  all_endpoints.rs  basic.rs  counter.rs  empty.rs  gateway.rs  levels.rs  old_counter.rs  sharded.rs  sharding.rs  trait.rs
macros/: Cargo.toml
proc/: Cargo.toml
proc/src/: discord.rs  json.rs  lib.rs
src/: as_json.rs  errors.rs  events.rs  gateway.rs  http.rs  json.rs  lib.rs  logger.rs  macros.rs  main.rs  shard.rs  sharding.rs  snowflake.rs
src/encode/: json.rs  mod.rs  urls.rs
src/gateway/: events.rs  mod.rs
src/gateway/models/: audit_log.rs  channel.rs  guild.rs  message.rs  mod.rs  payload.rs  user.rs  voice.rs
src/http/: mod.rs  rate_limit.rs
src/http/models/: channel.rs  guild.rs  message.rs  mod.rs  user.rs
src/models/: channel.rs  guild.rs  message.rs  mod.rs  payload.rs  user.rs  voice.rs
src/storage/: channel.rs  guild.rs  guild_member.rs  mod.rs  private_channel.rs  user.rs
