[package]
name = "automate"
version = "0.2.0"
authors = ["mbenoukaiss <marwane.benou-kaiss@etu.u-bordeaux.fr>"]
license = "MIT"
repository = "https://github.com/mbenoukaiss/automate"
keywords = ["discord", "api", "async"]
categories = ["api-bindings"]
description = "An asynchronous library to interact with Discord API"
readme = "README.md"
edition = "2018"

[dependencies]
automate-derive = { version = "0.2.0", path = "derive" }
futures = "0.3"
async-trait = "0.1"
tokio = { version = "0.2", features = ["time"] }
hyper = { version = "0.13", default-features = false }
hyper-tls = "0.4"
url = "2.1"
tungstenite = "*"
tokio-tungstenite = { version = "0.10", features = ["tls"] }
chrono = "0.4"
log = "0.4"
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"

[dependencies.backtrace]
version = "0.3"
optional = true

[features]
default = []

# Checks for unused fields when deserializing an object.
strict-deserializer = []
