[package]
name = "automate"
version = "0.3.0"
authors = ["mbenoukaiss <marwane.benou-kaiss@etu.u-bordeaux.fr>"]
license = "MIT"
repository = "https://github.com/mbenoukaiss/automate"
keywords = ["discord", "api", "async"]
categories = ["api-bindings"]
description = "An asynchronous library to interact with Discord API and make bots"
readme = "README.md"
edition = "2018"

[dependencies]
proc-macro-hack = "0.5"
automate-derive = { version = "0.3.0", path = "derive" }
futures = "0.3"
async-trait = "0.1"
tokio = { version = "0.2.10", features = ["time", "rt-threaded", "rt-util"] }
hyper = { version = "0.13", default-features = false }
hyper-tls = "0.4"
bytes = "0.5"
tungstenite = "0.10"
tokio-tungstenite = { version = "0.10", features = ["tls"] }
chrono = "0.4"
log = "0.4"
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.0"

[dependencies.backtrace]
version = "0.3"
optional = true

[features]
default = []

# Enables aggressive inlining on the JSON
# serializer for speed improvement at the
# cost of binary size and compile time.
aggressive-inlining = []