[package]
name = "automate"
version = "0.4.0"
authors = ["mbenoukaiss <marwane.benou-kaiss@etu.u-bordeaux.fr>"]
license = "MIT"
repository = "https://github.com/mbenoukaiss/automate"
keywords = ["discord", "api", "async"]
categories = ["api-bindings"]
description = "An asynchronous library to interact with Discord API and make bots"
readme = "README.md"
edition = "2018"
autoexamples = false

[dependencies]
automate-derive = { version = "0.3.1", path = "derive" }
futures = "0.3"
async-trait = "0.1"
tokio = { version = "0.2.10", features = ["sync", "time", "rt-threaded", "rt-util"] }
hyper = { version = "0.13", default-features = false }
hyper-tls = "0.4"
bytes = "0.5"
tokio-tungstenite = { version = "0.10", features = ["tls"] }
chrono = { version = "0.4", features = ["serde"]}
log = { version = "0.4", features = ["std"]}
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lazy_static = "1.0"

[dependencies.backtrace]
version = "0.3"
optional = true

[features]
default = ["storage"]

# Enables the storage system
storage = ["automate-derive/storage"]

# Returns error when deserialized data does not
# have a corresponding field in the struct.
# Only useful in development/debug to find data
# that the library should support.
#
# Re-exported to the derive crate.
strict-deserializer = ["automate-derive/strict-deserializer"]

# Trace data returned from HTTP endpoints. More
# costly since it requires storing the data in a
# string before deserializing it.
#
# Re-exported to the derive crate.
trace-endpoints = ["automate-derive/trace-endpoints"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "levels"
path = "examples/levels.rs"

[[example]]
name = "sharding"
path = "examples/sharding.rs"