[package]
name = "automate-derive"
version = "0.4.0"
authors = ["mbenoukaiss <marwane.benou-kaiss@etu.u-bordeaux.fr>"]
license = "MIT"
repository = "https://github.com/mbenoukaiss/automate"
description = "Derive macros for the automate library"
readme = "../README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"]}
quote = "1.0"
darling = "0.10"

[features]
default = []
storage = []
strict-deserializer = []
trace-endpoints = []